--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   },
   "devDependencies": {
     "npm-github-release": "^0.9.0"
+  },
+  "scripts": {
+    "release": "npm-github-release"
   }
 }
