--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "homebridge": ">=0.2.0"
   },
   "dependencies": {
+    "clone": "^2.1.1",
     "node-persist": "^0.0.8"
   },
   "devDependencies": {
