--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "node-persist": "^0.0.8"
   },
   "devDependencies": {
+    "eslint": "^4.18.0",
     "npm-github-release": "^0.9.0"
   },
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src",
     "release": "npm-github-release"
   }
 }
