--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ node_modules
 
 examples/slider/accessories/*
 examples/slider/persist/*
+
+examples/securitysystem/accessories/*
+examples/securitysystem/persist/*
