--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@ node_modules
 .DS_Store
 .vscode/*
 
-examples/slider/accessories/*
-examples/slider/persist/*
-
-examples/securitysystem/accessories/*
-examples/securitysystem/persist/*
+examples/*/accessories/*
+examples/*/persist/*
