--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "clone": "^2.1.1",
-    "node-persist": "^0.0.11"
+    "node-persist": "^0.0.11",
+    "suncalc": "^1.8.0"
   },
   "devDependencies": {
     "eslint": "^4.18.0",
