--- a/package.json
+++ b/package.json
@@ -27,13 +27,11 @@
   },
   "dependencies": {
     "clone": "^2.1.1",
-    "lodash": "4.17.13",
     "node-persist": "^0.0.11",
     "suncalc": "^1.8.0"
   },
   "devDependencies": {
-    "eslint": "^4.18.0",
-    "npm-github-release": "^0.9.0"
+    "eslint": "^4.19.1"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint src",
